--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <div class="section-header text-center wow fadeIn">
-                            <h2>Sort After Courses</h2>
+                            <h2>Sought After Courses</h2>
                             <p class="lead">Make your way down a Path and build specific skills that will help you land an amazing job. We are so much available to guide you through the nitty-gritty of digital marketing.</p>    
                         </div>
                     </div>
@@ -600,7 +600,7 @@
                         <p class="h5">Want to learn more about digital marketing? You can grab follow us on our social handle or give us a call today.</p>
                         <p class="m-b-md">.</p>
                         <a href="mailto:trybekent@gmail.com" class="btn-app apple-store edit"><i class="fa fa-apple"></i><span>Email</span>send us a mail</a>
-                        <a href="07017019040" class="btn-app google-play edit"><i class="fa fa-android"></i><span>Call</span>Give us a call</a>
+                        <a href="tel:07017019040" class="btn-app google-play edit"><i class="fa fa-android"></i><span>Call</span>Give us a call</a>
                     </div>
                     <!-- Image Device -->
                     <div class="col-md-6">
