--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <meta name="description" content="Trybe Kent Eplatform - Digital Marketing - Affliate of Avodah Networks" />
     <meta name="keywords" content="Trybe, Digital, Digital, Digital Marketing, Eplatform, ELesson, SEO, Content, Content Development, Faceboook Ads, Email Marketing, Social Media Managing, PPC, SEM" />
     <meta name="author" content="John Kent">
+    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=12323609-5390-4b8c-a471-718f1ba1af9e"> </script>
+<!-- End of  Zendesk Widget script -->
+
 
   
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
