--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="author" content="John Kent">
     <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=12323609-5390-4b8c-a471-718f1ba1af9e"> </script>
 <!-- End of  Zendesk Widget script -->
-
+<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"c22d61c060d6c608414b4f843","lid":"5f52732eb6","uniqueMethods":true}) })</script>
 
   
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
