--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1 text-center">
                         <p class="text-white text-uppercase f-w-700"><small>Join thousands of people from our platform to become certified.</small></p>
-                        <form class="form-inline form-white" id="mailchimpForm" action="https://720degreehub.us4.list-manage.com/subscribe/post?u=5af0af6e2f0479fee52ce1e86&amp;id=57037e24a9">
+                        <form class="form-inline form-white" id="mailchimpForm" action="https://netlify.us19.list-manage.com/subscribe/post?u=c22d61c060d6c608414b4f843&amp;id=5f52732eb6">
                             <div class="form-group">
                                 <input type="text" class="form-control" id="m2Name" placeholder="Your Name" name="MERGE1" required>
                                 <input type="email" class="form-control" id="m2Email" placeholder="Your Email" name="MERGE0" required>
