--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                                 <p class="p-opacity m-b-md">A good social media strategy will greatly increase your brand recognition since you will be engaging with a broad audience of consumers who are interested in your product.
 
                                 </p>
-                                <a href="#" class="btn btn-ghost">Register</a>
+                                <a href="https://forms.gle/Sr4rfMgpnU1MfmyT9" class="btn btn-ghost">Register</a>
                             </div>
                         </div>
                     </div>
