--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
                                     <p>In-Demand</p>
                                 </div>
                                 <p class="p-opacity m-b-md">Email marketing is one of the best ways to build one-on-one relationships with current and potential customers. Each time an email is sent to consumers, awareness of your company, products and services is reinforced. </p>
-                                <a href="#" class="btn btn-ghost">Register</a>
+                                <a href="https://forms.gle/yx2ykXSJ7z4ShfT28" class="btn btn-ghost">Register</a>
                             </div>
                         </div>
                     </div>
@@ -315,7 +315,7 @@
                                     <p>High Demand</p>
                                 </div>
                                 <p class="p-opacity m-b-md">SEO helps to get your site on the top of the search engine result list, top of the search list means a high tendency for your website to be seen by your target audience. These users are now considered as your leads. Once they gets their required information from your website, these leads may turn into your customers. Don’t miss out on this amazing opportunity.</p>
-                                <a href="#" class="btn btn-ghost">Register</a>
+                                <a href="https://forms.gle/gFw421qAHHBrtQvM6" class="btn btn-ghost">Register</a>
                             </div>
                         </div>
                     </div>
@@ -334,7 +334,7 @@
                                     <p>High Demand</p>
                                 </div>
                                 <p class="p-opacity m-b-md">Content “ is life". It's the heartbeat of Digital Marketing. As any blog posts, static web copy, podcasts, video etc you see rely solely on Content Development which is either sales ads or content creation.</p>
-                                <a href="#" class="btn btn-ghost">Register</a>
+                                <a href="https://forms.gle/dyY8hnAvM9bWRRVa9" class="btn btn-ghost">Register</a>
                             </div>
                         </div>
                     </div>
@@ -350,7 +350,7 @@
                                     <p>In-Demand</p>
                                 </div>
                                 <p class="p-opacity m-b-md">Search Engine Marketing or Paid ads are paid listings, with the longer term of search marketing used to encompass both SEO and SEM Using Google Adwords and other components.</p>
-                                <a href="#" class="btn btn-ghost">Register</a>
+                                <a href="https://forms.gle/S65TcCjMSQQwde9F7" class="btn btn-ghost">Register</a>
                             </div>
                         </div>
                     </div>
@@ -366,7 +366,7 @@
                                     <p>In-Demand</p>
                                 </div>
                                 <p class="p-opacity m-b-md">The future of CONTENT. This area of digital marketing explains contents visually. And as you know, what you see or hear tend to stick more than what you read. Hence, this area turns content to tangible information.</p>
-                                <a href="#" class="btn btn-ghost">Register</a>
+                                <a href="https://forms.gle/oKRB2tLHXc3citGX8" class="btn btn-ghost">Register</a>
                             </div>
                         </div>
                     </div>
