--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <meta name="description" content="Trybe Kent Eplatform - Digital Marketing - Affliate of Avodah Networks" />
     <meta name="keywords" content="Trybe, Digital, Digital, Digital Marketing, Eplatform, ELesson, SEO, Content, Content Development, Faceboook Ads, Email Marketing, Social Media Managing, PPC, SEM" />
     <meta name="author" content="John Kent">
-    <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=12323609-5390-4b8c-a471-718f1ba1af9e"> </script>
+    <!-- Start of  Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=92cd025d-2955-4e2a-8bff-6b86af968f20"> </script>
 <!-- End of  Zendesk Widget script -->
 <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/unique-methods/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us19.list-manage.com","uuid":"c22d61c060d6c608414b4f843","lid":"5f52732eb6","uniqueMethods":true}) })</script>
 
